# flask-state

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.zh-CN.md  dev-requirements.txt  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  tsconfig.json
.github/workflows/: Tests.yml  lint_python.yml
examples/: README.md  app.py  config.py  console_machine_status  docker-compose.yml  package-lock.json
examples/compress/cjs/: flask-state.min.js
examples/compress/css/: flask-state.min.css
examples/script/: modify_compress_files.py
examples/static/: LICENSE  css-index.js  flask_state.css  i18n.js  index.js  initial.js  initial.tsx
examples/static/cjs/: flask-state.css  flask-state.js  flask-state.min.js  flask_state.js  i18n.js  index.js  package.json
examples/static/entry/: index.html  index.js
examples/static/umd/: en.js  flask-state.css  flask-state.js  flask-state.min.js  flask_state.js  index.js  initial.js  zh.js
examples/templates/: index.html
flask_state/: __about__.py  __init__.py
flask_state/conf/: config.py
flask_state/controller/: manager.py
flask_state/dao/: host_status.py
flask_state/i18n/: README.zh-CN.md
flask_state/models/: __init__.py  console_host.py
flask_state/server/: __init__.py  bind_id.py  host_status.py  language.py
flask_state/static/: flask_state.js
flask_state/utils/: auth.py  date.py  file_lock.py  format_conf.py
requirements/: dev.in  dev.txt  docs.in  docs.txt  tests.in  tests.txt
src/flask_state/: __about__.py  __init__.py  migrate.py
src/flask_state/conf/: config.py
src/flask_state/controller/: interceptors.py  manager.py  response_methods.py
src/flask_state/dao/: host_status.py
src/flask_state/exceptions/: __init__.py  error_code.py  error_msg.py  log_msg.py
src/flask_state/i18n/: README.zh-CN.md
src/flask_state/migrations/: alembic.ini  env.py
src/flask_state/models/: __init__.py  console_host.py  flask_state_host.py  flask_state_io.py
src/flask_state/server/: __init__.py  host_status.py
tests/: conftest.py  test_basic_app.py  test_config.py  test_exceptions.py  test_model.py  test_route.py  test_server.py  test_services.py  test_utils.py
(+24 files in other folders)
