[metadata]
name = Flask-State
# Version needs regex in setup.py.
url = https://github.com/yoobool/flask-state
project_urls =
    Code = https://github.com/yoobool/flask-state
    Issue tracker = https://github.com/yoobool/flask-state/issues
license = BSD-3-Clause
license_files = LICENSE.rst
author = aaajiulong
author_email = yhl@uuchat.io
maintainer = Yoobool
description = Show local state to users through Echarts.
long_description = file: README.md
long_description_content_type = text/x-markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content