[metadata]
name = Flask-State
# Version needs regex in setup.py.
url = https://github.com/yoobool/flask-state
project_urls =
    Code = https://github.com/yoobool/flask-state
    Issue tracker = https://github.com/yoobool/flask-state/issues
license = BSD-3-Clause
license_files = LICENSE.rst
author = Yoobool
author_email = yhl@uuchat.io
maintainer = Yoobool
description = Show local state to users through Echarts.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.5
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
exclude =
    src.flask_state.static
    src.flask_state.i18n

[options.data_files]
migrations =
    src/flask_state/migrations/versions/637920a840f7_.py
    src/flask_state/migrations/alembic.ini
    src/flask_state/migrations/env.py
    src/flask_state/migrations/script.py.mako